<resources>
    <string name="app_name">ScrumFitApp</string>
    <string name="CreateRoutineDay_Title">Create your routine</string>
    <string name="CreateRoutineDay_Subtitle">How many days in the week you plan to workout</string>
    <string name="Nav_Home">Home</string>
    <string name="Nav_List">List</string>
    <string name="Nav_Create">Create</string>
    <string name="Nav_Profile">Profile</string>
    <string name="CreateRoutineList_Title">Create Your Routine</string>
    <string name="CreateRoutineList_Subtitle">List of exercises</string>
    <string name="CreateRoutineList_Description">Select your exercise</string>
    <string name="CreateRoutineSelect_Title">Create Your Routine</string>
    <string name="CreateRoutineSelect_Subtitle">Select your Exercises</string>
    <string name="CreateRoutineSelect_Save">Save workout</string>
    <string name="HomeDashboard_Title">Dashboard</string>
    <string name="HomeDashboard_Description">Week Progress</string>
    <string name="HomeDashboard_Label">Number of days:</string>
    <string name="ListRoutineDaily_Title">Daily Workout</string>
    <string name="ListRoutineExercise_TargetMuscle">TargetMuscle</string>
    <string name="ListRoutineWorkout_Title">Workout</string>
    <string name="LogRegister_Title">Register</string>
    <string name="LogRegister_Label">Access your account so you can start building your \nroutines in seconds</string>
    <string name="LogRegister_Username">Username</string>
    <string name="LogRegister_Name">Name</string>
    <string name="LogRegister_Password">Password</string>
    <string name="LogRegister_Email">Email</string>
    <string name="LogRegister_Height">Height (cm)</string>
    <string name="LogRegister_Weight">Weight (kg)</string>
    <string name="LogRegister_Birthday">Birthday (mm/dd/yyyy)</string>
    <string name="LogRegister_BtnRegister">Register</string>
    <string name="LogRegister_Message">Already have an account?</string>
    <string name="LogRegister_BtnSignIn">Sign In</string>
    <string name="LogSignIn_Title">Sign In</string>
    <string name="LogSignIn_Message">Access your account so you can start building your routines in seconds.</string>
    <string name="LogSignIn_Username">Username</string>
    <string name="LogSignIn_Password">Password</string>
    <string name="LogSignIn_MessagePassword">Your password must be 8 or more characters long and contain a mix of upper and lower case letters, numbers and symbols.</string>
    <string name="LogSignIn_BtnSignIn">SIGN IN</string>
    <string name="LogSignIn_MessageSignUp">Don’t have an account?</string>
    <string name="LogSignIn_BtnSignUp">Sign Up</string>
    <string name="ProfileEdit_Title">Edit Profile</string>
    <string name="ProfileEdit_BtnSave">Save</string>
    <string name="ItemDailyWorkout_Day">Day</string>
    <string name="ItemExercise_TargetMuscle">TargetMuscle</string>
</resources>