<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListRoutine_Workout_Activity">

    <TextView
    android:id="@+id/tvTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ListRoutineWorkout_Title"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginTop="40dp" />

    <ListView
        android:id="@+id/lvExercises"
        android:layout_width="0dp"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="40dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_Home"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_home_foreground"
            />

        <Button
            android:id="@+id/btnListRoutine"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_List"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_routines_foreground"
            />

        <Button
            android:id="@+id/btnCreateRoutine"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_Create"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_create_foreground"
            />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_Profile"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_profile_foreground"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>