<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListRoutine_Exercise_Activity">

    <TextView
        android:id="@+id/tvNoExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise # 1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/tvTargetMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ListRoutineExercise_TargetMuscle"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvNoExercise"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/edTargetMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pectoralis Major Clavicular Head"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvTargetMuscle"
        app:layout_constraintLeft_toRightOf="@id/tvTargetMuscle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvTargetMuscle"
        app:layout_constraintStart_toStartOf="@id/tvTargetMuscle"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/edExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bench Press"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvExerciseName"
        app:layout_constraintStart_toStartOf="@id/edTargetMuscle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"/>

    <ImageView
        android:id="@+id/imgExercise"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/exercise"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_Home"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_home_foreground"
            />

        <Button
            android:id="@+id/btnListRoutine"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_List"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_routines_foreground"
            />

        <Button
            android:id="@+id/btnCreateRoutine"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_Create"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_create_foreground"
            />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/Nav_Profile"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_profile_foreground"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>